update windows build + run